<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/form_default_margin"
    tools:context=".ui.form.FormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxWidth="400dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hint_name"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:capitalize="words"/>

            <EditText
                android:id="@+id/birth_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_default_margin"
                android:autofillHints="@string/hint_birth_date"
                android:hint="@string/hint_birth_date"
                android:inputType="none"
                android:clickable="true"
                android:focusableInTouchMode="false"/>

            <com.hbb20.CountryCodePicker
                android:id="@+id/country_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFullName="true"
                app:ccp_showPhoneCode="false"
                app:ccp_showNameCode="false"
                android:layout_marginTop="@dimen/form_default_margin"
                android:minHeight="@dimen/min_touch_target"
                app:ccpDialog_textColor="@android:color/primary_text_dark"
                app:ccp_arrowColor="@android:color/primary_text_dark"
                app:ccp_contentColor="@android:color/primary_text_dark"/>

            <EditText
                android:id="@+id/city_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_default_margin"
                android:autofillHints="@string/hint_city"
                android:hint="@string/hint_city"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_default_margin"
                android:autofillHints="@string/hint_email"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_default_margin"
                android:autofillHints="@string/hint_password"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/repeat_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_default_margin"
                android:autofillHints="@string/hint_repeat_password"
                android:hint="@string/hint_repeat_password"
                android:inputType="textPassword" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_touch_target"
        android:text="@string/register_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>